samples/_failures_safe/1761299718_268cf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45502eed.c: In function ‘main’:
./samples/SAFE/__tmp_45502eed.c:172:5: error: expected ‘,’ or ‘;’ at end of input
  172 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_45502eed.c:172:5: error: expected declaration or statement at end of input
